Added filter that sets CORS header to allow requests from any origin.

--- a/CLA/pom.xml
+++ b/CLA/pom.xml
@@ -89,6 +89,13 @@
 			</exclusions>
 		</dependency>
 
+        <dependency>
+            <!-- We need this for our CORS filter. -->
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.0.1</version>
+            <scope>provided</scope>
+        </dependency>
 
 	</dependencies>
 
