--- a/CLA/pom.xml
+++ b/CLA/pom.xml
@@ -97,6 +97,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
 	</dependencies>
 
 	<build>
