--- a/CLA/pom.xml
+++ b/CLA/pom.xml
@@ -102,6 +102,19 @@
             <artifactId>commons-io</artifactId>
             <version>1.3.2</version>
         </dependency>
+        
+	    <dependency>
+	      <groupId>junit</groupId>
+	      <artifactId>junit</artifactId>
+	      <version>4.8.1</version>
+	      <scope>test</scope>
+	    </dependency>
+	    <dependency>
+	      <groupId>org.mockito</groupId>
+	      <artifactId>mockito-all</artifactId>
+	      <version>1.8.5</version>
+	      <scope>test</scope>
+	    </dependency>
 
 	</dependencies>
 
