--- a/CLA/pom.xml
+++ b/CLA/pom.xml
@@ -4,7 +4,7 @@
 	<groupId>nl.ing.hackathon</groupId>
 	<artifactId>CLA</artifactId>
 	<packaging>war</packaging>
-	<version>1.0</version>
+	<version>2.0-SNAPSHOT</version>
 	<name>Child Labour App</name>
 	<url>http://maven.apache.org</url>
 
